syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateBaseDiskRequest {
    string SrcImageId = 1;
    types.Disk SrcDisk = 5;
    string SrcDiskCheckpointId = 6;
    types.Disk BaseDisk = 2;
    string BaseDiskCheckpointId = 3;
    uint64 BaseDiskSize = 4;
    bool UseDataplaneTasksForLegacySnapshots = 7;
}

message CreateBaseDiskTaskState {
    uint32 Step = 2;
    uint64 SrcDiskMilestoneBlockIndex = 3;
    uint64 SrcDiskMilestoneCheckpointSize = 4;
}
